# pico-examples

hello_world/: CMakeLists.txt
hello_world/test_serial/: CMakeLists.txt  test_serial.c
i2c/: CMakeLists.txt
i2c/bh1750_i2c/: CMakeLists.txt  bh1750_i2c.adoc  bh1750_i2c.c
i2c/bmp280_i2c/: CMakeLists.txt  bmp280_i2c.c
pico_w/: CMakeLists.txt
pico_w/adafruit_io_bmp280/: CMakeLists.txt  README.md  adafruit_io_bmp280.c  lwipopts.h  mbedtls_config.h
pico_w/wifi/access_point/: CMakeLists.txt
pico_w/wifi/http_client/: CMakeLists.txt  lwipopts.h  picow_http_client.c
pico_w/wifi/tls_client/: CMakeLists.txt
spi/: CMakeLists.txt
spi/rc522_spi/: CMakeLists.txt  README.adoc  rc522_spi.c
